Fixed missing jackson2 JsonFactory.